[package]
name = "cpp-class-macro"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.0.0"
proc-macro2 = "1.0"
